--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container-header container">
         <div class="box-header">
           <img class="logo" src="./img/tipa-logo.svg" alt="" />
-          <span>12</span>
+          <span></span>
         </div>
       </div>
     </header>
@@ -19,13 +19,49 @@
     <main>
       <div class="container-header">
         <div class="img-box">
+          <img id="paper" class="paper" src="./img/paper.svg" alt="paper" />
+          <img id="rock" class="rock" src="./img/rock.svg" alt="rock" />
           <img class="back" src="./img/triangle.svg" alt="" />
-          <img class="paper" src="./img/paper.svg" alt="paper" />
-          <img class="rock" src="./img/rock.svg" alt="rock" />
-          <img class="scissors" src="./img/scissors.svg" alt="scissors" />
+          <img
+            id="scissors"
+            class="scissors"
+            src="./img/scissors.svg"
+            alt="scissors"
+          />
         </div>
+        <button class="rules-btn" id="rules">
+          <img class="rules-menu" src="./img/evaluation.png" width="50px" />
+        </button>
+
+        <section class="hidden-nav" id="hidden-nav">
+          <div class="rules-box">
+            <img class="relus-icon" src="./img/RULES.png" alt="" />
+            <button>
+              <img class="exit" id="exit" src="./img/x.svg" alt="" />
+            </button>
+          </div>
+
+          <div class="icons-box">
+            <div class="header-rules">
+              <img class="scissorss" src="./img/Group 8 Copy.png" alt="" />
+              <img class="beats-left" src="./img/BEATS.png" alt="" />
+              <img class="arrow-left" src="./img/Group 13.png" alt="" />
+              <img class="rockk" src="./img/Group 8 Copy 2.png" alt="" />
+            </div>
+            <div class="main-rules">
+              <img class="beats-down" src="./img/BEATS.png" alt="" />
+              <img class="arrow-down" src="./img/Group 13 Copy.png" alt="" />
+              <img class="arrow-up" src="./img/Group 13 Copy 2.png" alt="" />
+              <img class="beats-up" src="./img/BEATS.png" alt="" />
+            </div>
+            <div class="footer-rules">
+              <img class="paperr" src="./img/Group 8.png" alt="" />
+            </div>
+            <img src="" alt="" />
+          </div>
+        </section>
       </div>
     </main>
-    <script src="./app.js"></script>
+    <script typeof="module" src="./app.js"></script>
   </body>
 </html>
