--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <img class="rules-menu" src="./img/evaluation.png" width="50px" />
         </button>
 
-        <section class="hidden-nav" id="hidden-nav">
+        <section class="hidden-nav">
           <div class="rules-box">
             <img class="relus-icon" src="./img/RULES.png" alt="" />
-            <button>
-              <img class="exit" id="exit" src="./img/x.svg" alt="" />
+            <button id="exit">
+              <img class="exit-img" src="./img/x.svg" alt="" />
             </button>
           </div>
 
