--- a/index.html
+++ b/index.html
@@ -41,23 +41,12 @@
             </button>
           </div>
 
-          <div class="icons-box">
-            <div class="header-rules">
-              <img class="scissorss" src="./img/Group 8 Copy.png" alt="" />
-              <img class="beats-left" src="./img/BEATS.png" alt="" />
-              <img class="arrow-left" src="./img/Group 13.png" alt="" />
-              <img class="rockk" src="./img/Group 8 Copy 2.png" alt="" />
-            </div>
-            <div class="main-rules">
-              <img class="beats-down" src="./img/BEATS.png" alt="" />
-              <img class="arrow-down" src="./img/Group 13 Copy.png" alt="" />
-              <img class="arrow-up" src="./img/Group 13 Copy 2.png" alt="" />
-              <img class="beats-up" src="./img/BEATS.png" alt="" />
-            </div>
-            <div class="footer-rules">
-              <img class="paperr" src="./img/Group 8.png" alt="" />
-            </div>
-            <img src="" alt="" />
+          <div class="rules-basic-box">
+            <picture>
+              <source media="(max-width:500px)" srcset="img/rule-basic.svg" />
+              <source media="(max-width:412px)" srcset="img_white_flower.jpg" />
+              <img src="./img/rule-basic.svg" />
+            </picture>
           </div>
         </section>
       </div>
