--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="container-header container">
         <div class="box-header">
           <img class="logo" src="./img/tipa-logo.svg" alt="" />
-          <span></span>
+          <span class="schot"></span>
         </div>
       </div>
     </header>
@@ -19,14 +19,26 @@
     <main>
       <div class="container-header">
         <div class="img-box">
-          <img id="paper" class="nanBox paper" src="./img/paper.svg" />
+          <img
+            id="paper"
+            class="nanBox paper"
+            src="./img/paper.svg"
+            alt="paper"
+          />
           <img class="NanBox rock" src="./img/rock.svg" alt="rock" />
+
+          <img
+            id="scissor"
+            class="NaNBox scissors"
+            src="./img/scissors.svg"
+            alt="scissors"
+          />
           <img class="back" src="./img/triangle.svg" alt="" />
-          <img id="scissor" class="NaNBox scissors" src="./img/scissors.svg" />
         </div>
         <section class="block-box">
           <div class="comparitionss">
             <img class="human" src="" />
+            <h3 class="result"></h3>
             <img class="ai" src="" />
           </div>
         </section>
@@ -47,7 +59,7 @@
             <picture>
               <source media="(max-width:500px)" srcset="img/rule-basic.svg" />
               <source media="(max-width:412px)" srcset="img_white_flower.jpg" />
-              <img src="./img/rule-basic.svg" />
+              <img class="qoida-img" src="./img/rule-basic.svg" />
             </picture>
           </div>
         </section>
