--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
     <link rel="stylesheet" href="./main.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -20,26 +30,34 @@
       <div class="container-header">
         <div class="img-box">
           <img
-            id="paper"
             class="nanBox paper"
             src="./img/paper.svg"
-            alt="paper"
+            data-info="img/paper.svg"
           />
-          <img class="NanBox rock" src="./img/rock.svg" alt="rock" />
-
           <img
-            id="scissor"
-            class="NaNBox scissors"
+            class="NanBox rock"
+            src="./img/rock.svg"
+            data-info="img/rock.svg"
+          />
+          <img
+            class="naNBox scissors"
             src="./img/scissors.svg"
-            alt="scissors"
+            data-info="img/scissors.svg"
           />
           <img class="back" src="./img/triangle.svg" alt="" />
         </div>
+
         <section class="block-box">
           <div class="comparitionss">
             <img class="human" src="" />
-            <h3 class="result"></h3>
-            <img class="ai" src="" />
+            <div class="btn-box">
+              <h3 class="result"></h3>
+              <button id="refreshBtn" class="refresh">
+                <i class="fa-solid fa-arrows-rotate"></i>
+                Qayta O`ynash
+              </button>
+            </div>
+            <img class="ai" src="./" />
           </div>
         </section>
 
