--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
           <span class="schot"></span>
         </div>
       </div>
-    </header>
 
-    <main>
+      <!-- <main> -->
       <div class="container-header">
         <div class="img-box">
           <img
@@ -82,7 +81,8 @@
           </div>
         </section>
       </div>
-    </main>
+      <!-- </main> -->
+    </header>
     <script type="module" src="./app.js"></script>
   </body>
 </html>
